# Gyst

./: LICENSE  README.md  auth_issue.md  docker-compose.yml  next_fix_steps.md  package-lock.json  package.json  run-mcp.sh  text.md
backend/: .env.example  .gitignore  Dockerfile  clean_pycache.sh  embedding_cache.db  main.py  pyproject.toml  test_setup.py
backend/db/: chroma.sqlite3
backend/examples/: README.md  conversation_memory_demo.py
backend/src/backend/api/: __init__.py
backend/src/backend/api/routes/: __init__.py  chat.py  correlations.py  documents.py  rag.py
backend/src/backend/core/: __init__.py  batch_processor.py  config.py  crewai_service.py  database.py  document_reference_extractor.py  document_resolver.py  document_tool_factory.py  error_handler.py  error_intervention_manager.py  pattern_recognition_service.py
backend/src/backend/core/cache/: __init__.py  cache_strategies.py  embedding_batch_processor.py  embedding_cache_manager.py
backend/src/backend/core/config/: __init__.py  config.py  rag_config.py
backend/src/backend/crud/: __init__.py
backend/src/backend/exceptions/: analysis_exceptions.py
backend/src/backend/gemini/: __init__.py  client.py  utils.py
backend/src/backend/schema/: __init__.py  chat.py  conversation_memory.py  document_analysis.py
backend/tests/: test_chat_endpoint.py  test_conversation_memory.py  test_enhanced_rag_integration.py  test_functional_circuit_breaker.py  test_tools_factory_implementation.py
backend/uploads/chat_memory/: conversations.db
backend/uploads/conversation_memory/: conversation_memory.db
(+220 files in other folders)
