[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn>=0.34.2,<0.35.0",
    "crewai>=0.120.1,<0.121.0",
    "crewai-tools>=0.45.0,<0.46.0",
    "pydantic>=2.11.4,<3.0.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0,<2.0.0"
]

[tool.setuptools]
packages = {find = {where = ["src"]}}

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
